# complex-stories

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ecosystem.config.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
backend/: README.md  check_papers.py  clear_papers.py  create_tables.py  dg.toml  local-postgres-setup.md  main.py  pyproject.toml  start_api.sh
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  duckdb_client.py  parquet_utils.py  query_utils.py
backend/app/internal/: admin.py
backend/app/models/: __init__.py  academic.py  annotation_datasets.py  auth.py  cached_papers.py  dark_data_survey.py  datalakes.py  datasets.py  interdisciplinarity.py  registry.py  sciscidb.py
backend/app/routers/: annotations.py  auth.py  babynames.py  dark_data_survey.py  datalakes.py  datasets.py  interdisciplinarity.py  open_academic_analytics.py  registry.py  scisciDB.py  storywrangler.py  test_datalakes.py  wikimedia.py
backend/data/: academic-department.parquet  academic-research-groups.parquet
backend/deployments/local/: pyproject.toml
backend/projects/data-luminosity/: pyproject.toml
backend/projects/data-luminosity/scripts/: compare_periods.py  test_queries.py
backend/projects/data-luminosity/src/data_luminosity/defs/: resources.py
backend/projects/open-academic-analytics/: pyproject.toml
backend/projects/open-academic-analytics/src/open_academic_analytics/defs/: resources.py
backend/projects/test-project/: pyproject.toml
backend/projects/test-project/src/test_project/: definitions.py
backend/scripts/: README.md  migrate_adapter_to_entity_mappings.py
backend/scripts/academic-department/: Makefile
backend/scripts/academic-department/output/: upload_dataset.py
backend/scripts/academic-research-groups/: Makefile
backend/scripts/academic-research-groups/export/: upload_dataset.py
backend/scripts/academic-research-groups/hand/: augment.py
backend/scripts/academic-research-groups/import/: parse.py
backend/scripts/academic-research-groups/input/: scrape.py
backend/scripts/label-studio/academic-department/old/: setup_project.py
backend/scripts/label-studio/academic-research-groups/: Makefile  faculty_project_info.yaml  import_data.py  setup_project.py
backend/scripts/label-studio/academic-research-groups/export/: upload_dataset.py  upload_tasks.py
backend/scripts/label-studio/academic-research-groups/import/: parse.py
backend/scripts/label-studio/academic-research-groups/input/: scrape.py
backend/scripts/overthinking-fos/: Makefile
backend/scripts/overthinking-fos/export/: upload_dataset.py
backend/scripts/overthinking-fos/input/: google-scholar.parquet  google-scholar.py
backend/scripts/scisciDB/: Makefile  config.py  openalex_schema.py  papers_lookup.pid
backend/scripts/scisciDB/enrich/: add_derived_fields.py  sync_db.py
backend/scripts/scisciDB/examples/: getting-started.py
backend/scripts/scisciDB/export/: field_metrics.py  field_year_counts.py
backend/scripts/scisciDB/import/: openalex_schema.py  parse.py  validate.py
backend/scripts/scisciDB/input/: download.py  download_s2.py
backend/scripts/scisciDB/load/: create_tables.py  create_views.py  load.py  load_to_ducklake.py
backend/shared/: pyproject.toml
backend/shared/clients/: complex_stories_api.py
backend/shared/shared/clients/: complex_stories_api.py  label_studio.py  openalex.py  semantic_scholar.py
backend/src/backend/: definitions.py
backend/tests/: conftest.py  test_query_utils.py  test_registry_continuity.py
src/lib/stories/open-academic-analytics/: README  README.md  config.py  pyproject.toml  setup.cfg  setup.py  state.svelte.ts
src/lib/stories/open-academic-analytics/assets/: definitions.py
src/lib/stories/open-academic-analytics/assets/collect/: academic_publications.py  coauthor_cache.py  embeddings.py  researcher_list.py  uvm_departments.py  uvm_profs_2023.py
src/lib/stories/open-academic-analytics/assets/export/: author.py  coauthor.py  paper.py
src/lib/stories/open-academic-analytics/assets/fit/: change_point_bayesian.py  umap_embeddings.py
src/lib/stories/open-academic-analytics/assets/network/: collaboration_network.py
src/lib/stories/open-academic-analytics/assets/prepare/: split_training.py
src/lib/stories/open-academic-analytics/backend/: pyproject.toml  test_openalex.py
src/lib/stories/open-academic-analytics/components/: ChangePointChart.svelte  CoauthorChart.svelte  Collaboration.Agg.svelte  Dashboard.svelte  DodgeChart.svelte  Index.svelte  Legend.svelte  Nav.svelte  PaperChart.svelte  Productivity.Agg.svelte  Sidebar.svelte  TimelineChart.svelte  Tooltip.svelte  TutorialPopup.svelte  coauthorUtils.js  paperUtils.js  state.svelte.ts
src/lib/stories/open-academic-analytics/components/helpers/: ThemeToggle.svelte  (+1 more)
src/lib/stories/open-academic-analytics/data/: loader.js
src/lib/stories/open-academic-analytics/modules/: author_processor.py  database_adapter.py
src/lib/stories/open-academic-analytics/open_academic_analytics/: assets.py  author_preprocessing_assets.py  coauthor_preprocessing_assets.py  data_collection.py  definitions.py  paper_preprocessing_assets.py  timeline_coauthor_assets.py  timeline_paper_assets.py  visualization_prep.py
src/lib/stories/open-academic-analytics/open_academic_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/stories/open-academic-analytics/open_academic_analyticsOld/: data_collection.py  research_analysis.py
src/lib/stories/open-academic-analytics/utils/: coauthorUtils.js  colorScales.js  combinedChartUtils.js  paperUtils.js
(+579 files in other folders)
