[project]
name = "shared"
version = "0.1.0"
description = "Shared clients and utilities for Complex Stories backend"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.11.12",
    "requests>=2.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

