[project]
name = "data_luminosity"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.16",
    "dagster-duckdb>=0.27.16",
    "lxml>=6.0.2",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "shared",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_luminosity"
registry_modules = [
    "data_luminosity.components.*",
]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }


