[project]
name = "open_academic_analytics"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.12",
    "dagster-duckdb>=0.27.12",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pymongo>=4.15.1",
    "requests>=2.25.0",
    "shared @ file:///users/j/s/jstonge1/complex-stories-dev/backend/shared",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]
bayesian = [
    "cmdstanpy>=1.2.0",
    "arviz>=0.18.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]
umap = [
    "umap-learn>=0.5.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "open_academic_analytics"
registry_modules = [
    "open_academic_analytics.components.*",
]

[tool.hatch.metadata]
allow-direct-references = true


