[project]
name = "open_academic_analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "pandas",
    "fastparquet",
    "pyarrow",
    "tqdm",
    "dagster-cloud",
    "arviz",
    "cmdstanpy",
    "umap-learn",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "assets.definitions"
code_location_name = "assets"

[tool.setuptools.packages.find]
exclude=["open_academic_analytics_tests"]
