[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.11.9",
    "dagster-dg-cli>=1.11.9",
    "dagster-duckdb>=0.27.9",
    "dagster-webserver>=1.11.9",
    "pandas>=2.3.2",
    "umap-learn>=0.5.9.post2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "backend"
registry_modules = [
    "backend.components.*",
]
